resources/style.css
/* ... */
.overlay-top-left > :last-child { top: var(--theme-inner-element-spacing); left: var(--theme-inner-element-spacing) }
.overlay-top-right > :last-child { top: var(--theme-inner-element-spacing); right: var(--theme-inner-element-spacing) }
.overlay-bottom-left > :last-child { bottom: var(--theme-inner-element-spacing); left: var(--theme-inner-element-spacing) }
.overlay-bottom-right > :last-child { bottom: var(--theme-inner-element-spacing); right: var(--theme-inner-element-spacing) }
.overlay-center > :last-child { top: 50%; left: 50%; transform: translate(-50%, -50%) }

/****************
*   Selection   *
****************/

swd-selection {
    display: flex;
    flex-direction: column;
    min-width: 150px;
    background: var(--theme-element-primary-color);
    border-radius: var(--theme-border-radius);
}

swd-selection a:not(:first-child) {
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
}

swd-selection a:not(:last-child) {
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
}

/***************
*   Dropdown   *
***************/

swd-dropdown { position: relative }
swd-dropdown input[readonly] { cursor: pointer }
swd-dropdown input { width: 100% }

swd-dropdown-content {
    display: block;
    position: absolute;
    z-index: 4;
    min-width: 100%;
    overflow-y: auto;
}

swd-dropdown-content.swd-dropdown-content-up { bottom: 100% }
swd-dropdown-content.swd-dropdown-content-right { right: 0 }

/*************
*   Dialog   *
*************/

swd-dialog {
    position: fixed;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    align-items: center;
    justify-content: center;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.8);
    padding: var(--theme-inner-element-spacing);
    overflow-y: auto;
    z-index: 4;
}

swd-dialog > * { 
    max-width: 400px; 
    max-height: 100%; 
    overflow-y: auto; 
}

/***********************
*   Loading Skeleton   *
***********************/

swd-skeleton-text, swd-skeleton-shape {
    display: inline-block;
    cursor: wait;
    background: linear-gradient(90deg, var(--theme-element-primary-color) 30%, var(--theme-element-secondary-color) 50%, var(--theme-element-primary-color) 70%);
    border-radius: var(--theme-border-radius);
    animation: skeleton-loading 2s linear infinite;
    background-size: 200%;
}

swd-skeleton-text {
    height: 1em;
    width: 100%;
}

@keyframes skeleton-loading {
    0% { background-position: 100% 0 }
    100% { background-position: -100% 0 }
}

/**********************
*   Loading Spinner   *
**********************/

swd-loading-spinner[loading]:not([loading="false"]) {
    display: inline-block;
    position: relative;
    height: max-content;
    cursor: wait;
    min-height: calc(1em);
    min-width: calc(1em);
}

swd-loading-spinner[loading]:not([loading="false"])::after {
    content: '';
    position: absolute;
    mask: no-repeat center url('data:image/svg+xml;utf8,<svg width="18" height="18" stroke="white" xmlns="http://www.w3.org/2000/svg"><style>g{transform-origin:center;animation:rotation 2s linear infinite}g circle{animation:stroke 1.5s ease-in-out infinite}@keyframes rotation{100%{transform:rotate(360deg)}}@keyframes stroke{0%{stroke-dasharray:0 150;stroke-dashoffset:0}50%{stroke-dasharray:30 150;stroke-dashoffset:-20}95%,100%{stroke-dasharray:45 150;stroke-dashoffset:-49}}</style><g><circle cx="9" cy="9" r="8" fill="none" stroke-width="2"></circle></g></svg>');
    mask-size: contain;
    background: var(--theme-primary-color);
    height: calc(1em);
    width: calc(1em);
    top: 50%;
    left: 50%;
    font-size: 30px;
    transform: translate(-50%, -50%);
    z-index: 1;
}

swd-loading-spinner[loading]:not([loading="false"]):not(:empty)::before {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    background: light-dark(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5));
    width: 100%;
    height: 100%;
    z-index: 1;
}

/****************
*   Container   *
****************/

[class*="container-"] {
    box-sizing: border-box;
    padding: calc(var(--theme-element-spacing) * 2);
    margin: 0px auto;
    width: 100%;
}

.container-sm { max-width: 576px }
.container-md { max-width: 768px }
.container-lg { max-width: 992px }
.container-xl { max-width: 1200px }
.container-xxl { max-width: 1400px }
.container-fluid { max-width: 100% }

@media only screen and (max-width: 575px) { [class*="container-"] { padding: calc(var(--theme-element-spacing)) }}

/***********
*   Grid   *
************/

[class*="grid-cols-"] {
    display: grid;
    gap: var(--theme-element-spacing);
    height: max-content;
    margin-bottom: var(--theme-element-spacing);
}

[class*="grid-cols-"].grid-auto-height { height: auto }

.grid-cols-1 { grid-template-columns: repeat(1, minmax(0, 1fr)) }
.grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)) }
.grid-cols-3 { grid-template-columns: repeat(3, minmax(0, 1fr)) }
.grid-cols-4 { grid-template-columns: repeat(4, minmax(0, 1fr)) }
.grid-cols-5 { grid-template-columns: repeat(5, minmax(0, 1fr)) }
.grid-cols-6 { grid-template-columns: repeat(6, minmax(0, 1fr)) }
.grid-cols-7 { grid-template-columns: repeat(7, minmax(0, 1fr)) }
.grid-cols-8 { grid-template-columns: repeat(8, minmax(0, 1fr)) }
.grid-cols-9 { grid-template-columns: repeat(9, minmax(0, 1fr)) }
.grid-cols-10 { grid-template-columns: repeat(10, minmax(0, 1fr)) }
.grid-cols-11 { grid-template-columns: repeat(11, minmax(0, 1fr)) }
.grid-cols-12 { grid-template-columns: repeat(12, minmax(0, 1fr)) }
.grid-span-1 { grid-column: span 1 }
.grid-span-2 { grid-column: span 2 }
.grid-span-3 { grid-column: span 3 }
.grid-span-4 { grid-column: span 4 }
.grid-span-5 { grid-column: span 5 }
.grid-span-6 { grid-column: span 6 }
.grid-span-7 { grid-column: span 7 }
.grid-span-8 { grid-column: span 8 }
.grid-span-9 { grid-column: span 9 }
/* ... */

